# simpleBlockAllocator

./: .gitignore  CMakeLists.txt  Doxyfile  README.md
src/: CMakeLists.txt  allocator.h  allocatorTest.cpp  blockAllocator.cpp  blockAllocator.h  blockAllocatorExceptions.cpp  blockAllocatorExceptions.h  main.cpp  mainPage.txt
test/: CMakeLists.txt  allocatorTest.cpp  testRunner.cpp
test/lib/include/CppUTest/: CppUTestConfig.h
